force-app/main/default/objects/Account/fields/AFRServiceProvider__c.field-meta.xml
<CustomField>
    <fullName>AFRServiceProvider__c</fullName>
    <label>AFR Service Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plism</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>