force-app/main/default/objects/Account/fields/CC__c.field-meta.xml
<CustomField>
    <fullName>CC__c</fullName>
    <inlineHelpText>Make sure to separate email with comma &apos;,&apos;</inlineHelpText>
    <label>CC</label>
    <type>TextArea</type>
</CustomField>