force-app/main/default/objects/Account/fields/CC_for_EXP__c.field-meta.xml
<CustomField>
    <fullName>CC_for_EXP__c</fullName>
    <label>CC (for EXP)</label>
    <type>TextArea</type>
</CustomField>