force-app/main/default/objects/Account/fields/clofor_com_cfs__A_N_Notes__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__A_N_Notes__c</fullName>
    <inlineHelpText>Input the information of the customer PIC for A/N  or any method for sending A/N(by Email, by FAX etc.)</inlineHelpText>
    <label>REMARKS WHEN SEND A/N</label>
    <type>TextArea</type>
</CustomField>