force-app/main/default/objects/Account/fields/clofor_com_cfs__AccountExternalID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AccountExternalID__c</fullName>
    <externalId>true</externalId>
    <label>ACCOUNT EXTERNAL ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>