force-app/main/default/objects/Account/fields/clofor_com_cfs__AccountIntExtType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AccountIntExtType__c</fullName>
    <label>ACCOUNT INT &amp; EXT TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__AccountIntExtType</valueSetName>
    </valueSet>
</CustomField>