force-app/main/default/objects/Account/fields/clofor_com_cfs__AccountQRcode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AccountQRcode__c</fullName>
    <formula>IF(ISBLANK(clofor_com_cfs__AccountExternalID__c), AccountNumber, clofor_com_cfs__AccountExternalID__c)</formula>
    <label>Account QR/Barcode ID</label>
    <type>Text</type>
</CustomField>