force-app/main/default/objects/Account/fields/clofor_com_cfs__AccountQRcodeImage__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AccountQRcodeImage__c</fullName>
    <formula>IMAGE(&apos;https://chart.googleapis.com/chart?chs=100x100&amp;cht=qr&amp;chl=&apos; + clofor_com_cfs__AccountQRcode__c,  &apos;Account QR/Barcode ID&apos;)</formula>
    <label>Account QR/Barcode Image</label>
    <type>Text</type>
</CustomField>