force-app/main/default/objects/Account/fields/clofor_com_cfs__AFR_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AFR_Service_Provider__c</fullName>
    <label>JP24H ADVANCED FILING SERVICE PROVIDER</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PLISM(AFR Solution+KLNET)</fullName>
            </value>
            <value>
                <fullName>KTNET</fullName>
            </value>
            <value>
                <fullName>Tradeteck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>