force-app/main/default/objects/Account/fields/clofor_com_cfs__Airliner_Code__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Airliner_Code__c</fullName>
    <label>Airliner Code</label>
    <length>3</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>