force-app/main/default/objects/Account/fields/clofor_com_cfs__Area__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Area__c</fullName>
    <label>AREA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>新宿区・渋谷区周辺</fullName>
                <label>SHINJYUKU・SHIBUYA AREA</label>
            </value>
            <value>
                <fullName>台東区・中央区周辺</fullName>
                <label>TAITO-KU・CHUO-KU AREA</label>
            </value>
            <value>
                <fullName>その他（東京）</fullName>
                <label>OTHER (TOKYO)</label>
            </value>
            <value>
                <fullName>関東（神奈川）</fullName>
                <label>KANTO REGION (KANAGAWA PREF.)</label>
            </value>
            <value>
                <fullName>関東（埼玉）</fullName>
                <label>KANTO REGION (SAITAMA PREF.)</label>
            </value>
            <value>
                <fullName>関東（その他）</fullName>
                <label>KANTO REGION (OTHER)</label>
            </value>
            <value>
                <fullName>大阪・兵庫</fullName>
                <label>OSAKA・HYOGO-PREF.</label>
            </value>
            <value>
                <fullName>博多・下関</fullName>
                <label>HAKATA・SHIMONOSEKI</label>
            </value>
            <value>
                <fullName>その他（全国）</fullName>
                <label>OTHER (JAPAN)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>