force-app/main/default/objects/Account/fields/clofor_com_cfs__BadDebtAmountLocalBadDebtRollup__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BadDebtAmountLocalBadDebtRollup__c</fullName>
    <label>Bad Debt Amount(Local)-Bad Debt Rollup</label>
    <summarizedField>clofor_com_cfs__BadDebt__c.clofor_com_cfs__BadDebtAmountLocal__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__BadDebt__c.clofor_com_cfs__Debtor__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>