force-app/main/default/objects/Account/fields/clofor_com_cfs__BalToMaxOnBehalfOfLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BalToMaxOnBehalfOfLocal__c</fullName>
    <formula>clofor_com_cfs__Accu_receivablelimits__c -  clofor_com_cfs__UncollectedOnBehalfOfLocal__c</formula>
    <label>BAL TO MAX ON-BEHALF-OF AMOUNT(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>