force-app/main/default/objects/Account/fields/clofor_com_cfs__BalToMaxReceivableLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BalToMaxReceivableLocal__c</fullName>
    <formula>clofor_com_cfs__receivable_limits__c -  clofor_com_cfs__Unpaid__c</formula>
    <label>BAL TO MAX RECEIVABLE AMOUNT(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>