force-app/main/default/objects/Account/fields/clofor_com_cfs__BaltoWarningCombinedAmountFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BaltoWarningCombinedAmountFCY__c</fullName>
    <formula>clofor_com_cfs__WarningCombinedAmountFCY__c -  clofor_com_cfs__UncollectedReceivableFCY__c -  clofor_com_cfs__UncollectedOnBehalfOfFCY__c</formula>
    <label>Bal to Warning Combined Amount(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>