force-app/main/default/objects/Account/fields/clofor_com_cfs__BaltoWarningCombinedAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BaltoWarningCombinedAmountLocal__c</fullName>
    <formula>clofor_com_cfs__WarningCombinedAmountLocal__c -  clofor_com_cfs__UncollectedOnBehalfOfLocal__c -  clofor_com_cfs__Unpaid__c</formula>
    <label>Bal to Warning Combined Amount(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>