force-app/main/default/objects/Account/fields/clofor_com_cfs__BaltoWarningOnBehalfOfAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BaltoWarningOnBehalfOfAmountLocal__c</fullName>
    <formula>clofor_com_cfs__WarningOnBehalfOfAmountLocal__c -  clofor_com_cfs__UncollectedOnBehalfOfLocal__c</formula>
    <label>Bal to Warning OnBehalfOf Amount(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>