force-app/main/default/objects/Account/fields/clofor_com_cfs__Bank3__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Bank3__c</fullName>
    <label>BANK③</label>
    <type>TextArea</type>
</CustomField>