force-app/main/default/objects/Account/fields/clofor_com_cfs__Bank4__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Bank4__c</fullName>
    <label>BANK④</label>
    <type>TextArea</type>
</CustomField>