force-app/main/default/objects/Account/fields/clofor_com_cfs__Bank5__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Bank5__c</fullName>
    <label>BANK⑤</label>
    <type>TextArea</type>
</CustomField>