force-app/main/default/objects/Account/fields/clofor_com_cfs__Bank_No1__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Bank_No1__c</fullName>
    <label>Bank No ①</label>
    <type>TextArea</type>
</CustomField>