force-app/main/default/objects/Account/fields/clofor_com_cfs__BasicCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BasicCode__c</fullName>
    <label>GENERAL CODE(COMPANY NO.)</label>
    <length>7</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>