force-app/main/default/objects/Account/fields/clofor_com_cfs__BB__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BB__c</fullName>
    <inlineHelpText>To have lists in pickup list, the lists need to be setup in advance.
How to Setup the Airport, 
1.click Quick Access Menu at right side tab
2.click view fields
3.click BB Available Airport
4.click New button in Picklist value
5.add airports</inlineHelpText>
    <label>BB AVAILABLE AIRPORT</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>clofor_com_cfs__Custom_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Enter Break Bulk available airport in here</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>