force-app/main/default/objects/Account/fields/clofor_com_cfs__BillingCountryCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BillingCountryCode__c</fullName>
    <label>Billing Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__CountryCode</valueSetName>
    </valueSet>
</CustomField>