force-app/main/default/objects/Account/fields/clofor_com_cfs__Branch_Name1__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Branch_Name1__c</fullName>
    <label>Branch Name ①</label>
    <type>TextArea</type>
</CustomField>