force-app/main/default/objects/Account/fields/clofor_com_cfs__Carrier_Code__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Carrier_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If the Account is carrier, put its carrier code in this field.</inlineHelpText>
    <label>Carrier Code</label>
    <referenceTo>clofor_com_cfs__Carrier_Code__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>