force-app/main/default/objects/Account/fields/clofor_com_cfs__CCcompany_1__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CCcompany_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DESIGNATED CUSTOMS CLEARANCE BROKER①</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>取引先 (指定通関業者-①)</relationshipLabel>
    <relationshipName>CCcompany_1</relationshipName>
    <type>Lookup</type>
</CustomField>