force-app/main/default/objects/Account/fields/clofor_com_cfs__CompanyShortName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CompanyShortName__c</fullName>
    <label>Account Short Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>