force-app/main/default/objects/Account/fields/clofor_com_cfs__ControlBadDebt__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ControlBadDebt__c</fullName>
    <label>How control Bad Debt</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__HowToControlWarningMaxAmount</valueSetName>
    </valueSet>
</CustomField>