force-app/main/default/objects/Account/fields/clofor_com_cfs__Custom_Industry__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Custom_Industry__c</fullName>
    <label>Custom Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>海運</fullName>
                <label>MARINE TRANSPORTATION</label>
            </value>
            <value>
                <fullName>空運</fullName>
                <label>AIR TRANSPORTATION</label>
            </value>
            <value>
                <fullName>運輸関連</fullName>
                <label>RELATED TO TRANSPORT</label>
            </value>
            <value>
                <fullName>商社</fullName>
                <label>TRADING COMPANY</label>
            </value>
            <value>
                <fullName>アパレル</fullName>
                <label>APPAREL</label>
            </value>
            <value>
                <fullName>消費財</fullName>
                <label>CONSUMER PRODUCT</label>
            </value>
            <value>
                <fullName>軽工業</fullName>
                <label>LIGHT INDUSTRY</label>
            </value>
            <value>
                <fullName>原材料</fullName>
                <label>RAW MATERIAL</label>
            </value>
            <value>
                <fullName>食品</fullName>
                <label>FOOD</label>
            </value>
            <value>
                <fullName>機械</fullName>
                <label>MACHINERY</label>
            </value>
            <value>
                <fullName>化学製品</fullName>
                <label>CHEMICAL PRODUCTS</label>
            </value>
            <value>
                <fullName>その他</fullName>
                <label>OTHER</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>