force-app/main/default/objects/Account/fields/clofor_com_cfs__CustomerType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CustomerType__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__CustomerType</valueSetName>
    </valueSet>
</CustomField>