force-app/main/default/objects/Account/fields/clofor_com_cfs__CustomService_port__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CustomService_port__c</fullName>
    <label>CUSTOM SERVICE BROKER DETAILS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>clofor_com_cfs__Custom_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>東京港通関</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>