force-app/main/default/objects/Account/fields/clofor_com_cfs__EnglishAddress__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EnglishAddress__c</fullName>
    <inlineHelpText>Input Company Address in English and it will appear On B/L, A/N and other documents.</inlineHelpText>
    <label>ENGLISH ADDRESS</label>
    <type>TextArea</type>
</CustomField>