force-app/main/default/objects/Account/fields/clofor_com_cfs__EnglishCompanyName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EnglishCompanyName__c</fullName>
    <description>英語の会社名を入れるところです。</description>
    <inlineHelpText>Input Company Name in English and it will appear on B/L, A/N, and other documents</inlineHelpText>
    <label>ACCOUNT NAME(ENG)</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>