force-app/main/default/objects/Account/fields/clofor_com_cfs__ExSale__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ExSale__c</fullName>
    <defaultValue>false</defaultValue>
    <description>過去2012年前期以前に取引があった会社</description>
    <label>BUSINESS HISTORY</label>
    <type>Checkbox</type>
</CustomField>