force-app/main/default/objects/Account/fields/clofor_com_cfs__External_Sales__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__External_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EXTERNAL SALES</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>External_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>