force-app/main/default/objects/Account/fields/clofor_com_cfs__Filer__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Filer__c</fullName>
    <description>Filingする会社</description>
    <label>Filer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>登録会社</fullName>
                <default>true</default>
                <label>登録会社</label>
            </value>
            <value>
                <fullName>当社</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>