force-app/main/default/objects/Account/fields/clofor_com_cfs__FMSBadDebtUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FMSBadDebtUSD__c</fullName>
    <label>FMS BAD DEBT(USD)</label>
    <summarizedField>clofor_com_cfs__CustomObject1__c.clofor_com_cfs__BadDebtUSD__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__CustomObject1__c.clofor_com_cfs__Field1__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>