force-app/main/default/objects/Account/fields/clofor_com_cfs__ImporterNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ImporterNumber__c</fullName>
    <label>EXPORT/IMPORT COMPANY CODE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>